objects/Milestone__c/fields/Completed_Todos__c.field-meta.xml
<CustomField>
    <fullName>Completed_Todos__c</fullName>
    <label>Completed Todos</label>
    <summaryFilterItems>
        <field>To_Do_Items__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>To_Do_Items__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>