objects/Milestone__c/fields/percentagecomplete__c.field-meta.xml
<CustomField>
    <fullName>percentagecomplete__c</fullName>
    <label>% complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>